@@ -1,3 +1,9 @@
+2017-08-10  Fritz Reese <Reese-Fritz@zai.com>
+
+	* decl.c (attr_seen): New static variable.
+	* decl.c (variable_decl): Match %FILL in STRUCTURE body.
+	* gfortran.texi: Update documentation.
+
 2017-08-08  Martin Liska  <mliska@suse.cz>
 
 	* trans-types.c: Include header files.
